--- a/content/econ_foundations.yml
+++ b/content/econ_foundations.yml
@@ -181,6 +181,11 @@ Economics:
           - "Short Q: Labour/wages; Land/rent; Capital/interest; Enterprise/profit."
 
     Production Possibility Curve:
+        visuals:
+      - src: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/PPF_expansion.svg/1024px-PPF_expansion.svg.png"
+        caption: "Outward shift of the PPC (growth)"
+      - src: "https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/Production_Possibility_Frontier.svg/1024px-Production_Possibility_Frontier.svg.png"
+        caption: "Baseline PPC with axes"
       time_estimate: "45 minutes"
       diagram: ppc_diagram
       alt_text: "Concave PPC showing trade‑offs between Good A and Good B."
