Update and rename bm_business_org.yml.OFF to bm_business_org.yml

--- a/content/bm_business_org.yml
+++ b/content/bm_business_org.yml
@@ -37,5 +37,4 @@ Business Management:
       ia_scaffold: ["Design stakeholder interview questions."]
       ee_scaffold: ["Build a case study framework for governance analysis."]
       teacher_notes:
-        talking_points: ["Clarify liability vs control."]
-        sample_answers: ["MCQ rationale examples as above."]
+        talking_points: ["Clarify liability vs co
