--- a/content/bm_business_org.yml
+++ b/content/bm_business_org.yml
@@ -21,20 +21,39 @@ Business Management:
           mini_frame: "Similarities → Differences → Mini-conclusion."
       short_questions:
         - question: "List three ownership forms and one feature each."
-          hint_chain: ["Think liability and control."]
+          hint_chain:
+            - "Think liability and control."
           model_answer: "Sole trader (unlimited liability), Partnership (shared control), Corporation (limited liability)."
       extended_questions:
         - question: "Discuss whether social enterprises can be as financially sustainable as for-profits."
-          planning_scaffold: ["Define sustainability", "Revenue models", "Cost structures", "Impact measurement"]
+          planning_scaffold:
+            - "Define sustainability"
+            - "Revenue models"
+            - "Cost structures"
+            - "Impact measurement"
           criteria: "AO3 Discuss"
           model_answer: "Under certain models (hybrids, cross-subsidy) they can; depends on market, governance, and funding."
       mcqs:
         - question: "Which structure limits owner liability?"
-          options: {A: "Sole trader", B: "Partnership", C: "Corporation", D: "General partnership"}
-          answer: C
-          rationales: {A: "Unlimited liability.", B: "Partners usually have unlimited liability.", C: "Correct.", D: "General partners have unlimited liability."}
-      exit_ticket: ["Define stakeholder in one line."]
-      ia_scaffold: ["Design stakeholder interview questions."]
-      ee_scaffold: ["Build a case study framework for governance analysis."]
+          options:
+            A: "Sole trader"
+            B: "Partnership"
+            C: "Corporation"
+            D: "General partnership"
+          answer: "C"
+          rationales:
+            A: "Unlimited liability."
+            B: "Partners usually have unlimited liability."
+            C: "Correct."
+            D: "General partners have unlimited liability."
+      exit_ticket:
+        - "Define stakeholder in one line."
+      ia_scaffold:
+        - "Design stakeholder interview questions."
+      ee_scaffold:
+        - "Build a case study framework for governance analysis."
       teacher_notes:
-        talking_points: ["Clarify liability vs co
+        talking_points:
+          - "Clarify liability vs control."
+        sample_answers:
+          - "MCQ rationale examples as above."
